--- a/index.html
+++ b/index.html
@@ -9,25 +9,25 @@
 <body>
     
 <div class="container">
-    <div class="screen">4504</div>
+    <div class="screen">0</div>
     <button class="AC">AC</button>
     <button class="plus/minus grey">+/-</button>
     <button class="percentage grey">%</button>
-    <button class="division grey">/</button>
-    <button class="seven black">7</button>
-    <button class="eight black">8</button>
-    <button class="nine black">9</button>
-    <button class="multiply grey">*</button>
-    <button class="four black">4</button>
-    <button class="five black">5</button>
-    <button class="six black">6</button>
-    <button class="minus grey">-</button>
-    <button class="one black">1</button>
-    <button class="two black">2</button>
-    <button class="three black">3</button>
-    <button class="plus grey">+</button>
-    <button class="zero black">0</button>
-    <button class="dot black">.</button>
+    <button class="division operator grey">/</button>
+    <button class="num seven black">7</button>
+    <button class="num eight black">8</button>
+    <button class="num nine black">9</button>
+    <button class="multiply operator grey">*</button>
+    <button class="num four black">4</button>
+    <button class="num five black">5</button>
+    <button class="num six black">6</button>
+    <button class="minus operator grey">-</button>
+    <button class="num one black">1</button>
+    <button class="num two black">2</button>
+    <button class="num three black">3</button>
+    <button class="plus operator grey">+</button>
+    <button class="num zero black">0</button>
+    <button class="num dot black">.</button>
     <button class="equalTo grey">=</button>
 </div>
 <script src="script.js"></script>   
